# HW_Qt

./: .gitignore
Lesson 01/HelloGraphicWorld/: CMakeLists.txt  main.cpp
Lesson 02/Task1/: CMakeLists.txt  main.cpp
Lesson 03/Task1/: CMakeLists.txt  dbconnectdialog.cpp  dbconnectdialog.h  dbconnectdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson 04/Task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson 05/Task1/: CMakeLists.txt  Stopwatch.cpp  Stopwatch.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  secundomer.cpp  secundomer.h
Lesson 06/: 06_ExampConcurr.rar
Lesson 06/PreConcurrent/PreConcurrent/: CMakeLists.txt  mainwindow.cpp
Lesson 06/Task1/: CMakeLists.txt  mainwindow.cpp
Lesson 07/Task 1/: CMakeLists.txt  graphicwindow.cpp  graphicwindow.h  graphicwindow.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson 08/: CMakeLists.txt  database.cpp  database.h  dbdata.cpp  dbdata.h  dbdata.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
